feat: add points field to all responses
