# docs/swagger.json
@@ -4074,6 +4074,10 @@
                     "type": "string",
                     "example": "123e4567-e89b-12d3-a456-426614174000"
                 },
+                "points": {
+                    "type": "integer",
+                    "example": 5
+                },
                 "position": {
                     "type": "integer",
                     "example": 2
@@ -4123,6 +4127,10 @@
                 "executor_link": {
                     "type": "string",
                     "example": "123e4567-e89b-12d3-a456-426614174000"
+                },
+                "points": {
+                    "type": "integer",
+                    "example": 5
                 },
                 "position": {
                     "type": "integer",
